--- a/flexbox/11-styles.css
+++ b/flexbox/11-styles.css
@@ -711,17 +711,19 @@ ul.row {
 /*** ARTICLE PAGE ***/
 /* Section HERO (article)
     ============================= */
+
 .hero-article {
     background-size: 150rem 100rem;
     background-position: 50% 0;
 }
-.hero-article ::before {
+.hero-article::before {
     content: '';
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 0;
     right: 0;
     left: 0;
+    bottom: 0;
     z-index: 0;
 }
 .hero-article .section-inner {
