--- a/form/01-styles.css
+++ b/form/01-styles.css
@@ -835,6 +835,7 @@ ul.row {
 /*** FORM ***/
 /* Comment section
     ============================= */
+
 .post-comments {
     width: 80%;
     margin: 10rem 0 0 auto;
@@ -843,9 +844,10 @@ ul.row {
 .post-comments .section-title {
     font-variant: small-caps;
 }
+
 /* Basic form
     ============================= */
-.form {
+form {
     display: flex;
     flex-direction: column;
     padding: 1rem 0;
