--- a/form/02-styles.css
+++ b/form/02-styles.css
@@ -855,7 +855,7 @@ form {
     padding: 1rem 0;
     margin: 0;
 }
-.fieldset {
+fieldset {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
