--- a/form/04-styles.css
+++ b/form/04-styles.css
@@ -871,7 +871,9 @@ label {
     font-size: 1.4rem;
     padding: 0 0 .5rem;
 }
-input[type="text"], input[type="email"], textarea {
+input[type="text"],
+input[type="email"],
+textarea {
     position: relative;
     width: 100%;
     padding: 1.2rem;
@@ -881,10 +883,13 @@ input[type="text"], input[type="email"], textarea {
     box-shadow: none;
     outline: 0;
 }
-input[type="text"], input[type="email"] {
+input[type="text"],
+input[type="email"] {
     padding-right: 3rem;
 }
-input[type="text"], input[type="email"], textarea {
+input[type="text"]:focus,
+input[type="email"]:focus,
+textarea:focus {
     border: .1rem solid var(--color-grey);
     background-color: var(--color-light-grey);
 }
