--- a/accessibility/keyboard/01-styles.css
+++ b/accessibility/keyboard/01-styles.css
@@ -275,7 +275,7 @@ template {
 }
 
 /* Base
-    ============================= */
+      ============================= */
 
 *,
 *:before,
@@ -364,7 +364,7 @@ a:active {
 }
 
 /* Helpers
-    ============================= */
+      ============================= */
 
 .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
@@ -378,7 +378,7 @@ a:active {
 /*** 2. LAYOUT ***/
 
 /* Layout
-    ============================= */
+      ============================= */
 
 .container {
     max-width: 960px;
@@ -392,7 +392,7 @@ main img {
 }
 
 /* Grid
-    ============================= */
+      ============================= */
 
 ul.row {
     margin: -1rem;
@@ -439,7 +439,7 @@ ul.row {
 }
 
 /* Navbar
-    ============================= */
+      ============================= */
 
 .nav {
     margin: 0;
@@ -506,7 +506,7 @@ ul.row {
 }
 
 /* Header
-  ============================= */
+    ============================= */
 
 .header {
     padding: var(--header-padding);
@@ -522,7 +522,7 @@ ul.row {
 }
 
 /* Header menu mobile
-  ============================= */
+    ============================= */
 
 .header .menu-icon {
     cursor: pointer;
@@ -625,7 +625,7 @@ ul.row {
 }
 
 /* Footer
-    ============================= */
+      ============================= */
 
 .footer {
     --nav-item-font-weight: normal;
@@ -674,7 +674,7 @@ ul.row {
 /*** 3. SECTION ***/
 
 /* Section (all styles)
-    ============================= */
+      ============================= */
 
 .section {
     padding: var(--section-padding);
@@ -711,7 +711,7 @@ ul.row {
 }
 
 /* Section theming
-    ============================= */
+      ============================= */
 
 [data-section-theme="dark"] {
     --button-color: var(--color-white);
@@ -721,7 +721,7 @@ ul.row {
 }
 
 /* Section HERO
-    ============================= */
+      ============================= */
 
 .section-hero {
     position: relative;
@@ -761,6 +761,10 @@ ul.row {
     padding-top: 5rem;
 }
 
+.article-page .header {
+    background-color: transparent;
+}
+
 @media only screen and (max-width: 767px) {
     .section-hero {
         margin: -0.1rem 0;
@@ -773,7 +777,7 @@ ul.row {
 }
 
 /* Section Latest news
-    ============================= */
+      ============================= */
 
 .section-latest-news .row {
     flex-direction: row-reverse;
@@ -786,14 +790,14 @@ ul.row {
 }
 
 /* Section SERVICES
-    ============================= */
+      ============================= */
 
 .section-services .row {
     flex-wrap: wrap;
 }
 
 /* Section ABOUT US
-    ============================= */
+      ============================= */
 
 .section-about-us [class*='col-'] {
     align-self: center;
@@ -802,14 +806,14 @@ ul.row {
 /*** 4. CARD ***/
 
 /* Card (all styles)
-    ============================= */
+      ============================= */
 
 .card-category {
     color: var(--color-primary);
 }
 
 /* Card WORK
-    ============================= */
+      ============================= */
 
 .card-work .card-outer {
     position: relative;
@@ -853,6 +857,7 @@ ul.row {
     display: block;
     text-decoration: none;
     padding-top: 45%;
+    opacity: 0;
 }
 
 .card-work .card-title a::after {
@@ -864,15 +869,7 @@ ul.row {
     content: '';
 }
 
-.card-work .card-title a {
-    opacity: 0;
-}
-.card-work .card-title a:focus {
-    opacity: 1;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
+.card-work .card-title a:focus,
 .card-work:hover .card-title a {
     opacity: 1;
     height: 100%;
@@ -895,17 +892,13 @@ ul.row {
         padding: 2rem 1rem 0 1rem;
     }
 
-    .card-work:hover .card-inner {
-        background-color: transparent;
-    }
-
     .card-work:hover .card-image {
         transform: none;
     }
 }
 
 /* Card SERVICES
-    ============================= */
+      ============================= */
 
 .card-services .card-title {
     margin: 0;
@@ -926,7 +919,7 @@ ul.row {
 }
 
 /* Card TESTIMONIAL
-    ============================= */
+      ============================= */
 
 .card-testimonial {
     text-align: center;
@@ -961,7 +954,7 @@ ul.row {
 /*** ARTICLE PAGE ***/
 
 /* Section HERO (article)
-    ============================= */
+      ============================= */
 
 .hero-article {
     background-size: 150rem 100rem;
@@ -996,7 +989,7 @@ ul.row {
 }
 
 /* Post
-    ============================= */
+      ============================= */
 
 .post {
     display: flex;
@@ -1042,7 +1035,7 @@ ul.row {
 }
 
 /* Post Meta
-    ============================= */
+      ============================= */
 
 .post-meta-list {
     flex-direction: column;
@@ -1069,7 +1062,7 @@ ul.row {
 }
 
 /* Tag list
-    ============================= */
+      ============================= */
 
 .tag-list {
     padding: 0;
@@ -1091,7 +1084,7 @@ ul.row {
 /*** FORM ***/
 
 /* Comment section
-    ============================= */
+      ============================= */
 
 .post-comments {
     width: 80%;
@@ -1112,7 +1105,7 @@ ul.row {
 }
 
 /* Basic form
-    ============================= */
+      ============================= */
 
 form {
     display: flex;
@@ -1167,7 +1160,7 @@ textarea:focus {
 }
 
 /* Form group
-    ============================= */
+      ============================= */
 
 .form-group {
     padding: 1rem;
@@ -1181,7 +1174,7 @@ textarea:focus {
 }
 
 /* Form field
-    ============================= */
+      ============================= */
 
 .form-field-container {
     position: relative;
@@ -1192,7 +1185,7 @@ textarea:focus {
 }
 
 /* Form help
-    ============================= */
+      ============================= */
 
 .form-group .form-help {
     margin: 0;
@@ -1211,7 +1204,7 @@ textarea:focus {
 }
 
 /* Form error handling
-    ============================= */
+      ============================= */
 
 input:not(:placeholder-shown)~.form-field-icon::after {
     height: 100%;
