--- a/sass_scss/1-color_variable.scss
+++ b/sass_scss/1-color_variable.scss
@@ -1,7 +1,7 @@
-$alt_color: #3D3D3D;
+$text_color: #3D3D3D;
 .body {
-    color: $alt_color;
+    color: $text_color;
 }
 .p {
-    color: $alt_color;
+    color: $text_color ;
 }
