--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,7 +1,7 @@
-$text-color: #FF0000;
-button {
-    color: $text-color;
-    :hover {
-        background-color: #00FF00;
-    }
-}
+button {  
+    color: #FF0000; // Default text color for button tags  
+
+    &:hover {  
+      color: #00FF00; // Text color when hovering over button tags  
+    }  
+}  
