--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,7 +1,10 @@
-button {  
-    color: #FF0000; // Default text color for button tags  
+/* Nested hover
+change button color on hover */
 
-    &:hover {  
-      color: #00FF00; // Text color when hovering over button tags  
-    }  
-}  
+button {
+    color: #FF0000;
+
+    &:hover {
+        color: #00FF00;
+    }
+}
