--- a/sass_scss/5-nested_child.scss
+++ b/sass_scss/5-nested_child.scss
@@ -1,9 +1,14 @@
-$text-color1: #3D3D3D;
-$text-color2: #FF0000;
+/* A Sass file that assigns:
+Text color #3D3D3D to elements inside body tags
+Text color #FF0000 to any elements of class .red that are the first children of the body
+You must use nested declarations */
 
-body {
-    color: $text-color1;
-    .red {
-        color: $text-color2;
-    }
+body{
+	color: #3D3D3D;
+}
+
+body{
+	> .red{
+		color: #FF0000;
+	}
 }
