--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,9 +1,9 @@
-/* Sass file */
-$color-0: #FF0000;
-$color-1: #00FF00;
-button {
-    color: $color-0;
-    &:hover {
-        color: $color-1;
-    }
+// This SCSS file styles button tags with specific colors and hover effects.  
+
+button {  
+    color: #FF0000; // Text color for button tags  
+
+    &:hover { // Change color on hover  
+      color: #00FF00; // New text color on hover  
+    }  
 }
